Fix media container not visible in comment section

--- a/app/assets/css/rtmedia.css
+++ b/app/assets/css/rtmedia.css
@@ -1640,6 +1640,23 @@ form.rt_media_comment_form .rtmedia-plupload-container {
   text-decoration: underline;
 }
 
+.rtmedia-uploader-div {
+  opacity: 0;
+  display: none;
+  visibility: hidden;
+}
+
+.rt_media_comment_form .rtmedia-uploader-div {
+  opacity: 1;
+  display: block;
+  visibility: visible;
+}
+
+#whats-new-options {
+  opacity: 0;
+  display: none;
+}
+
 a.rtmedia-comment-link {
   display: none;
 }
